@@ -572,3 +572,8 @@ MacroInsertIf::insert=&Insert
 1483=(Sell Agent HotBag)
 1484=(Organizer {0} HotBag)
 1485=The server address you entered could not be resolved.
+1486=Party: Accept Invitation
+1487=Party: Decline Invitation
+1488=Harmful Target
+1489=Beneficial Target
+1490=(Razor Friend)
