@@ -26,8 +26,8 @@ Global
 		{B32A4D9E-3AF1-4C75-989D-D62C4E8F08B1}.Debug.Build.0 = Release|Win32
 		{B32A4D9E-3AF1-4C75-989D-D62C4E8F08B1}.Release.ActiveCfg = Release|Win32
 		{B32A4D9E-3AF1-4C75-989D-D62C4E8F08B1}.Release.Build.0 = Release|Win32
-		{F308E8D5-2B4F-40AD-9BF7-9A8F5DDA420D}.Debug.ActiveCfg = Debug|Win32
-		{F308E8D5-2B4F-40AD-9BF7-9A8F5DDA420D}.Debug.Build.0 = Debug|Win32
+		{F308E8D5-2B4F-40AD-9BF7-9A8F5DDA420D}.Debug.ActiveCfg = Release|Win32
+		{F308E8D5-2B4F-40AD-9BF7-9A8F5DDA420D}.Debug.Build.0 = Release|Win32
 		{F308E8D5-2B4F-40AD-9BF7-9A8F5DDA420D}.Release.ActiveCfg = Release|Win32
 		{F308E8D5-2B4F-40AD-9BF7-9A8F5DDA420D}.Release.Build.0 = Release|Win32
 	EndGlobalSection
